--- a/chart-bar.html
+++ b/chart-bar.html
@@ -49,14 +49,17 @@ It is sometimes used to show trend data, and the comparison of multiple data set
     <style include="chart-styles"></style>
 
     <div>
-      <canvas id="canvas"></canvas>
+      <canvas width="100%" height="100%" id="canvas"></canvas>
     </div>
 
   </template>
 
   <script>
-    class ChartBar extends ChartBehaviors.ResizeBehavior(ChartBehaviors.ContextBehavior(ChartBehaviors.ChartPropertyBehavior(Polymer.mixinBehaviors([Polymer.IronResizableBehavior], Polymer.Element)))) {
-      static get is() { return 'chart-bar'; }
+    class ChartBar extends ChartBehaviors.ResizeBehavior(ChartBehaviors.ContextBehavior(ChartBehaviors.ChartPropertyBehavior(
+      Polymer.mixinBehaviors([Polymer.IronResizableBehavior], Polymer.Element)))) {
+      static get is() {
+        return 'chart-bar';
+      }
 
       ready() {
         super.ready();
@@ -66,6 +69,7 @@ It is sometimes used to show trend data, and the comparison of multiple data set
     };
 
     window.customElements.define(ChartBar.is, ChartBar);
+
   </script>
 
 </dom-module>
