--- a/chart-horizontal-bar.html
+++ b/chart-horizontal-bar.html
@@ -46,7 +46,7 @@ It is sometimes used to show trend data, and the comparison of multiple data set
 
   <template>
 
-    <style include="chart-styles"></style>
+    <style width="100%" height="100%" include="chart-styles"></style>
 
     <div>
       <canvas id="canvas"></canvas>
@@ -55,8 +55,11 @@ It is sometimes used to show trend data, and the comparison of multiple data set
   </template>
 
   <script>
-    class ChartHorizontalBar extends ChartBehaviors.ResizeBehavior(ChartBehaviors.ContextBehavior(ChartBehaviors.ChartPropertyBehavior(Polymer.mixinBehaviors([Polymer.IronResizableBehavior], Polymer.Element)))) {
-      static get is() { return 'chart-horizontal-bar'; }
+    class ChartHorizontalBar extends ChartBehaviors.ResizeBehavior(ChartBehaviors.ContextBehavior(ChartBehaviors.ChartPropertyBehavior(
+      Polymer.mixinBehaviors([Polymer.IronResizableBehavior], Polymer.Element)))) {
+      static get is() {
+        return 'chart-horizontal-bar';
+      }
 
       ready() {
         super.ready();
@@ -66,6 +69,7 @@ It is sometimes used to show trend data, and the comparison of multiple data set
     };
 
     window.customElements.define(ChartHorizontalBar.is, ChartHorizontalBar);
+
   </script>
 
 </dom-module>
