--- a/chart-radar.html
+++ b/chart-radar.html
@@ -56,15 +56,18 @@ They are often useful for comparing the points of two or more different data set
     <style include="chart-styles"></style>
 
     <div>
-      <canvas id="canvas"></canvas>
+      <canvas width="100%" height="100%" id="canvas"></canvas>
     </div>
 
   </template>
 
   <script>
-    class ChartRadar extends ChartBehaviors.ResizeBehavior(ChartBehaviors.ContextBehavior(ChartBehaviors.ChartPropertyBehavior(Polymer.mixinBehaviors([Polymer.IronResizableBehavior], Polymer.Element)))) {
+    class ChartRadar extends ChartBehaviors.ResizeBehavior(ChartBehaviors.ContextBehavior(ChartBehaviors.ChartPropertyBehavior(
+      Polymer.mixinBehaviors([Polymer.IronResizableBehavior], Polymer.Element)))) {
 
-      static get is() { return 'chart-radar' }
+      static get is() {
+        return 'chart-radar'
+      }
 
       ready() {
         super.ready();
@@ -74,5 +77,6 @@ They are often useful for comparing the points of two or more different data set
     };
 
     window.customElements.define(ChartRadar.is, ChartRadar);
+
   </script>
 </dom-module>
